force-app/main/default/objects/SFS_Custom_Settings__mdt/SFS_Custom_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type for SFS</description>
    <label>SFS Custom Setting</label>
    <pluralLabel>SFS Custom Settings</pluralLabel>
</CustomObject>