force-app/main/default/objects/SFS_Custom_Settings__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>explains the purpose of the metadata record</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>