force-app/main/default/objects/SFS_Custom_Settings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>defines if the record corresponds to a condition, endpoint, or allowed fields for an object to displayed on any custom LWC</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>