force-app/main/default/objects/SFS_Custom_Settings__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>stores the value of the metadata record based on the type and purpose defined</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>